--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -20,36 +20,13 @@ h1 {
 }
 
 ul {
+    color: white;
     background-color: #888;
     margin-top: 20px;
 }
 
-#number {
+#number, #tally, #score, #user {
+    color: white;
     background-color: #888;
-    font-size: 30px;
-    height: 100px;
-}
-
-#tally {
-    background-color: #888;
-    height: 100px;
-    width: 100px;
-
-}
-
-.image {
-    width: 50px;
-    height: 50px;
-}
-
-#score {
-    background-color: #888;
-    margin-top: 20px;
-    width: 350px;
-    height: 50px;
-}
-
-#user {
-    background-color: #888;
-    margin-top: 15px;
+    font-family: 'Monoton', cursive;
 }
